playing around with CSS

--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <html>
     <head>
         <title>Lock Test</title>
-        <script defer src="./index.js"></script>
+        <link rel="stylesheet" type="text/css" href="styles.css" />    
     </head>
+
+    <body>
+        <div class="text">
+            <h1 id="welcome">Welcome</h1>
+        </div>
+
+        <script async src="./index.js"></script>
+
+    </body>
 </html>
